# voice-instructor

./: .gitignore  README.md
python/cm-community-test-client/: sample_client.py
python/cm-modal/: sentence_transformer.py
python/cm-preset-bunny/: CloudFactory_task_ids_record.txt  CloudFactory_task_ids_review.txt  CloudFactory_worker_ids.txt  M47_task_ids_record.txt  M47_task_ids_review.txt  M47_worker_ids.txt  Quest_task_ids_record.txt  Quest_task_ids_review.txt  Quest_worker_ids.txt  Toloka_task_ids_record.txt  Toloka_task_ids_review.txt  Toloka_worker_ids.txt  create-test-tasks.py  generate-review-tasks.py  generate-worker-ids.py  preset-bunny-google-sheet-to-mongo.py  retrieve-tasks-1015.py
python/cm-ray-vm/: requirements.txt  serve_sentence_transformer.py
python/cm-teach-mode-replayer/: bunny_controller.py  html_utils.py  logger_setup.py  main.py  planner.py  recording.py  remove_authentication.py  replay_context.py  requirements.txt
python/cron/: lightspeed-community-1-shutdown.py
typescript/: .gitignore
typescript/app-caod-download/: eslint.config.js  package-lock.json  package.json  upload-to-gcs.sh
typescript/base-core/: package-lock.json  package.json
typescript/cm-quantum-peripheral/samples/quantum-mock-echo-python-client/: .gitignore  pyproject.toml
typescript/cm-quantum-peripheral/samples/quantum-mock-echo-python-client/src/: main.py
typescript/cm-quantum-peripheral/samples/quantum-peripheral-python-client/: build-schema.sh  pyproject.toml
typescript/cm-quantum-peripheral/samples/quantum-peripheral-python-client/src/: main.py  schema.py
(+790 files in other folders)
